- localization fixes
- /shell-lite/includes/images (empty folder) removal

(03/22/2012)
- Featured button IE8 fix
- Language translation fix for various pages
- blog-excerpt.php sidebar bug
- global $more; $more = 0; for blog.php to get the_excerpt working if needed
- bbPress breadcrumb compatibility patch by Dan Smith keystonedatabase.com

(04/16/2012)
- Breadcrumb Lists rewrite due to unknown disappearing lists 
- WordPress 3.4 add_theme_support('custom-background') w/backward compatibilities
- WordPress 3.4 add_theme_support('custom-header') w/backward compatibilities
- Blog Templates paged issues bug fix

(04/22/2012)
- Breadcrumb List chevron was not displaying
  correctly on Windows based systems

(04/24/2012)
- Another breadcrumb list fix

(06/08/2012)
- 3.4 upgraded and < 3.4 backward compatibilities

(06/08/2012)
- small CSS change for 100% image width

(02/18/2013)
Version was updated to 1.7.0
- Featured Image - Added option to change Homepage Featured Image
- Icons - YouTube icon was added.
- footer.php - Footer links updated
- header.php - Fix Stylesheet including recomendations by WordPress Theme Mentor plugin ( http://wordpress.org/extend/plugins/theme-mentor/ )
- blog.php and blog-excerpt.php - now they are using WP_Query instead of query_posts and Featured image size was fixed to the thumbnail.
- added max-width to images in sidebar to avoid overlapping the site

(11/28/2013)
Version was updated to 1.8.0
- Featured Image now can be added using WordPress Media Uploader.
- Added option to Display/Hide Author Bio bellow posts.
- Added option to Display/Hide Breadcrumbs.
- Added option to Display/Hide Homepage Featured Button.
- Added option to open Homepage Featured Button in new tab/window.
- Added New Social Icons from https://www.iconfinder.com/
- Social Icons now open in new tab.
- Minor CSS changes.
- Theme Code changes.

(04/04/2014)
Version was updated to 1.8.1
- Added i18n functions in front-page.php and another theme files.