@@ -615,6 +615,14 @@ form div {
 	margin: 39px 5px 0 -20px;
 }
 
+#wpml-language-selector #lang_sel ul {
+	z-index: 100;
+}
+
+#widgets #lang_sel ul ul {
+	z-index: 100;
+}
+
 /* =Content
 -------------------------------------------------------------- */
 #content {
